# pr-bot

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  webhook.json
.claude/: settings.local.json
app/: main.py  worker.py
app/api/: jobs.py  projects.py  test_errors.py  webhook.py  worker.py
app/core/: config.py  database.py
app/models/: error.py  job.py  project.py
app/prompts/: fix_error.py
app/repositories/: job.py  project.py
app/services/: agent.py  job_queue.py  project.py  worker_manager.py  workspace.py
app/services/parsers/: __init__.py  base.py  sentry.py
app/static/: index.html
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  worker.py
backend/api/: jobs.py  projects.py  setting.py  test_errors.py  webhook.py  worker.py
backend/core/: config.py  database.py  middleware.py
backend/models/: error.py  project.py  setting.py
backend/prompts/: fix_error.py
backend/repositories/: base.py  job.py  project.py  setting.py
backend/services/: agent.py  job_queue.py  project.py  setting.py  worker_manager.py  workspace.py
backend/services/notifications/: __init__.py  base.py  dooray.py
backend/services/parsers/: __init__.py  base.py  sentry.py
data/: jobs.db
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CreateProjectModal.tsx  JobDetail.tsx  (+8 more)
tests/: conftest.py  test_job_queue.py  test_models.py  test_parsers.py  test_webhook.py
(+4 files in other folders)
